# ai-traffic-congestion-detection

./: .gitignore  CONTRIBUTING.md  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt  signal_logic.py  tracker.py  traffic_core.py
.github/workflows/: ci.yml
assets/: README.md
docs/: architecture.md
src/traffic_system/: __init__.py  cli.py  config.py  dashboard.py  detection.py  pipeline.py  signal_logic.py  tracking.py
tests/: test_detection.py  test_pipeline_geometry.py  test_signal_logic.py  test_tracking.py
